Finish cover photos, fix wrapping on small screens

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -274,7 +274,7 @@ button span {
 }
 
 .profileHeaderContainer .coverPhotoSection {
-    height: 180px;
+    height: 320px;
     background-color: var(--blue);
     position:relative;
 }
@@ -425,8 +425,19 @@ button span {
     justify-content: center;
     height:100%
 }
+.coverPhotoContainer img {
+    width:100%;
+    height:100%;
+    object-fit:cover;
+}
 
-#imagePreview {
+.postBody span {
+    word-wrap: break-word;
+    word-break: break-word;
+}
+
+#imagePreview,
+#coverPreview{
     display: block;
     max-width:100%;
     width:100%;
